force-app/main/default/objects/FEC_Business_Process__c/FEC_Business_Process__c.object-meta.xml
<CustomObject>
    <label>FEC_Business Process</label>
    <nameField>
        <label>Business Process  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC_Business Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>