force-app/main/default/objects/FEC_Business_Process__c/fields/FEC_Alias__c.field-meta.xml
<CustomField>
    <fullName>FEC_Alias__c</fullName>
    <description>Tên viết tắt gợi nhớ cho Business Process</description>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>