force-app/main/default/objects/FEC_Business_Process__c/fields/FEC_Order__c.field-meta.xml
<CustomField>
    <fullName>FEC_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>