force-app/main/default/objects/FEC_Business_Process__c/fields/FEC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái quy trình</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>