force-app/main/default/objects/FEC_Business_Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_Name_VN__c</columns>
    <columns>FEC_Code__c</columns>
    <columns>FEC_Alias__c</columns>
    <columns>FEC_Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Business Processes</label>
</ListView>